[tool.poetry]
name = "python-pytest"
version = "0.1.0"
description = ""
authors = ["Michael Gambold <7439294+michaelgambold@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
