[tool.poetry]
name = "python-pytest"
version = "0.1.0"
description = ""
authors = ["Michael Gambold <7439294+michaelgambold@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.1"
pytest-mock = "^3.12.0"
httpx = "^0.27.0"
pytest-httpx = "^0.30.0"
coverage = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
